src/tests/testfiles/function-calls/parameter-type-2.txt
testfiles/function-calls/parameter-type-2.c:6:5: error: expected 'int' but argument is of type 'char []'
f("c");
  ^
